updated some styling to have button show on right side of the screen

--- a/templates/photos.html
+++ b/templates/photos.html
@@ -10,9 +10,12 @@
 <h2>Your Photos!</h2>
 <hr>
 
-<h3>Pages</h3>
-<form action="/to_home/" method="post">
-    <button type="submit" name="homeBtn">To Home</button>
-</form>
+<div style="float: right;">
+    <label style="display: block;">Pages</label>
+    <br>
+    <form action="/to_home/" method="post" style="display: block;">
+        <button type="submit" name="homeBtn" style="display: block;">To Home</button>
+    </form>
+</div>
 
 {% endblock %}
