--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,11 @@
 <h2>Welcome to the Photo Sharing App!</h2>
 <hr>
 
-<h3>Pages</h3>
-<form action="/to_photos/", method="post">
-    <button type="submit" name="photoBtn">To Photos</button>
-</form>
-
+<div style="float: right;">
+    <label style="display: block">Pages</label>
+    <br>
+    <form action="/to_photos/", method="post" style="display: block;">
+        <button type="submit" name="photoBtn" style="display: block;">To Photos</button>
+    </form>
+</div>
 {% endblock %}
